--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,15 +3,15 @@ repos:
     hooks:
       - id: autoodocs
         name: autoodocs
-        entry: bash -c '[ "$(git branch --show-current)" = "pages" ] && lua autodocs.lua . readme.md || true'
+        entry: bash -c '[ "$(git branch --show-current)" = "pages" ] && lua autodocs.lua . readme.md && git add readme.md || true'
         language: system
         pass_filenames: false
         always_run: true
-        stages: [pre-push]
+        stages: [pre-commit]
       - id: autoosite
         name: autoosite
-        entry: bash -c '[ "$(git branch --show-current)" = "pages" ] && lua mdtohtml.lua readme.md || true'
+        entry: bash -c '[ "$(git branch --show-current)" = "pages" ] && lua mdtohtml.lua readme.md && git add index.html || true'
         language: system
         pass_filenames: false
         always_run: true
-        stages: [pre-push]
+        stages: [pre-commit]
