--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,7 @@ repos:
         stages: [pre-commit]
       - id: autoosite
         name: autoosite
-        entry: bash -c '[ "$(git branch --show-current)" = "pages" ] && lua markdown.lua readme.md && git add readme.html || true'
+        entry: bash -c '[ "$(git branch --show-current)" = "pages" ] && lua markdown.lua readme.md && mv readme.html index.html && git add index.html || true'
         language: system
         pass_filenames: false
         always_run: true
