--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,14 +3,14 @@ repos:
     hooks:
       - id: autoodocs
         name: autoodocs
-        entry: bash -c '[ "$(git branch --show-current)" = "pages" ] && lua autodocs.lua -s . readme.md && git add readme.md || true'
+        entry: bash -c '[ "$(git branch --show-current)" = "pages" ] && lua autodocs.lua . readme.md && git add readme.md || true'
         language: system
         pass_filenames: false
         always_run: true
         stages: [pre-commit]
       - id: autoosite
         name: autoosite
-        entry: bash -c '[ "$(git branch --show-current)" = "pages" ] && lua markdown.lua readme.md && mv readme.html index.html && git add index.html || true'
+        entry: bash -c '[ "$(git branch --show-current)" = "pages" ] && lua markdown.lua readme.md && git add index.html || true'
         language: system
         pass_filenames: false
         always_run: true
