--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,16 +1,9 @@
 repos:
   - repo: local
     hooks:
-      - id: autoodocs
-        name: autoodocs
-        entry: bash -c '[ "$(git branch --show-current)" = "pages" ] && lua autodocs.lua . readme.md && git add readme.md || true'
-        language: system
-        pass_filenames: false
-        always_run: true
-        stages: [pre-commit]
-      - id: autoosite
-        name: autoosite
-        entry: bash -c '[ "$(git branch --show-current)" = "pages" ] && lua markdown.lua readme.md && git add index.html || true'
+      - id: autodocs
+        name: autodocs
+        entry: bash -c '[ "$(git branch --show-current)" = "pages" ] && lua build.lua && git add docs/ || true'
         language: system
         pass_filenames: false
         always_run: true
