--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
     hooks:
       - id: autodocs
         name: autodocs
-        entry: bash -c '[ "$(git branch --show-current)" = "pages" ] && lua build.lua && git add docs/ || true'
+        entry: bash -c 'lua build.lua && git add docs/'
         language: system
         pass_filenames: false
         always_run: true
