--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,8 @@
 repos:
   - repo: local
     hooks:
-      - id: autodocs
-        name: autodocs
+      - id: autoodocs
+        name: autoodocs
         entry: bash -c 'lua build.lua && git add docs/'
         language: system
         pass_filenames: false
